# a-parser

./: .env.template  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py  run_main.py
app/alembic/versions/: 2025_09_06_1226-f11fa5f1409c_create_user_table.py
app/api/: __init__.py
app/api/api_v1/: __init__.py  main_service_center_mvs_ukraine.py  migration_service.py  ukrainian_pension_fund.py
app/core/: config.py  dependencies.py  exception_handlers.py
app/core/exceptions/: __init__.py  base.py  file.py  validation.py
app/core/gunicorn/: __init__.py  application.py
app/core/models/: __init__.py  base.py  db_helper.py
app/core/schemas/: base.py  healthcheck.py  main_service_center_mvs_ukraine.py  migration_service.py  ukrainian_pension_fund.py
app/libs/: pdf_parser.py  xls_parser.py
app/services/main_service_center_mvs_ukraine/: __init__.py  base.py
app/services/migration_service/: __init__.py  base.py
app/services/ukrainian_pension_fund/: __init__.py  base.py
app/utils/: case_converter.py  decode.py  text_chain.py  text_parser.py  validate_file.py
docker-build/app/: Dockerfile
pg/: docker-compose.yml
